# Rust-Arbitrage-Binance-Bitstamp

./: Cargo.toml  README.md  build.rs
proto/: orderbook.proto
src/: client.rs  main.rs
