[package]
name = "rust_challenge"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "orderbook-server"
path = "src/main.rs"

[[bin]]
name = "orderbook-client"
path = "src/client.rs"

[dependencies]
tonic = "0.9.2"
tungstenite = "0.19.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.19.0"
tokio-native-tls = "0.3.1"
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["compat"] }
prost = "0.11.9"
futures = "0.3.28"
futures-util = "0.3.28"
protobuf = "3.2.0"
serde_json = "1.0.96"
env_logger = "0.10"
log = "0.4.19"
url = "2.4"
native-tls = "0.2.11"
async-trait = "0.1.68"
serde = "1.0.164"
anyhow = "1.0.71"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"